--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Send Discord Notification
         uses: actions/http-client@v2
         with:
-          url: "https://discord.com/api/webhooks/1423632532842348607/uOyYnGnD_JPMvn_fLC15O6A8-kTjnDQZCzTa2Z2fVo9CVMjeDWzfGajoQmv6w73hK0EA"
+          url: ${{ secrets.DISCORD_WEBHOOK }}
           method: POST
           headers: |
             Content-Type: application/json
