--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -8,9 +8,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Send Discord Notification
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
         run: |
-          curl -H "Content-Type: application/json" \
-            -d '{
-              "content": "New commit in **${{ github.repository }}** by **${{ github.actor }}**:\n`${{ github.sha }}` - ${{ github.event.head_commit.message }}\n<${{ github.event.head_commit.url }}>"
-            }' \
-            ${{ secrets.DISCORD_WEBHOOK }}
+          curl -X POST \
+            -H "Content-Type: application/json" \
+            -d @- "$DISCORD_WEBHOOK" <<EOF
+          {
+            "embeds": [{
+              "title": "🚀 New Commit",
+              "description": "**Repository:** ${{ github.repository }}\n**Author:** ${{ github.actor }}\n**Commit:** \`${GITHUB_SHA:0:7}\`",
+              "url": "${{ github.event.head_commit.url }}",
+              "color": 3447003,
+              "fields": [
+                {
+                  "name": "Message",
+                  "value": "$(echo "$COMMIT_MESSAGE" | head -c 200)"
+                }
+              ]
+            }]
+          }
+          EOF
