--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -33,7 +33,7 @@ jobs:
           {
             "embeds": [{
               "title": "🚀 New Commit",
-              "description": "**Repository:** ${{ github.repository }}\n**Author:** ${{ github.actor }}\n**Commit:** \`${GITHUB_SHA:0:7}\`",
+              "description": "**Repository:** ${{ github.repository }}\n**Commit:** \`${GITHUB_SHA:0:7}\`",
               "url": "${{ github.event.head_commit.url }}",
               "color": 3447003,
               "fields": [
@@ -48,6 +48,17 @@ jobs:
                   "inline": true
                 }
               ],
+              "author": {
+                "name": "${{ github.event.head_commit.author.name }}",
+                "icon_url": "https://github.com/${{ github.actor }}.png"
+                "url": "https://github.com/${{ github.actor }}"
+              },
+              "thumbnail": {
+                "url": "https://cdn.discordapp.com/icons/1294072522219978802/12e48a18d32be277c7b1dc8a87ac00b9.webp?size=256"
+              },
+              "image": {
+                "url": "https://i.ibb.co/HLRKTt6N/9039cf35d299e6afb3a0d8d5e018bcf2.png"
+              },
               "timestamp": "${{ github.event.head_commit.timestamp }}"
             }]
           }
