--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "canvas": "^3.2.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-google-recaptcha": "^3.1.0",
-    "recharts": "^3.2.1"
+    "react-konva": "^19.0.10",
+    "recharts": "^3.2.1",
+    "stackblur-canvas": "^2.7.0",
+    "tailwind-merge": "^3.3.1",
+    "use-image": "^1.1.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
