--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-konva": "^19.0.10",
     "recharts": "^3.2.1",
     "stackblur-canvas": "^2.7.0",
