--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "canvas": "^3.2.0",
+    "colorful": "^2.1.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "react": "19.1.0",
+    "react": "^19.1.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "19.1.0",
     "react-google-recaptcha": "^3.1.0",
     "react-intersection-observer": "^9.16.0",
