--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "canvas": "^3.2.0",
     "colorful": "^2.1.0",
+    "fast-average-color": "^9.5.0",
     "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
