--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colorful": "^2.1.0",
     "fast-average-color": "^9.5.0",
     "framer-motion": "^12.23.22",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "^19.1.0",
